--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\"[-3:] = str('.com') # False"
+    "\"art.vandelay@vandelay.co\"[-3:] = str(\"\".com\") # False"
    ]
   },
   {
