Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,22 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\"[-3:] == str(\".co\") # False"
+    "\"art.vandelay@vandelay.co\"[-4:] == str(\".com\") # False"
    ]
   },
   {
