--- a/index.ipynb
+++ b/index.ipynb
@@ -203,11 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"art.vandelay@vandelay.co\"[-4:] == str(\".com\") # False"
+    "\"art.vandelay@vandelay.co\"[-4:] == \".com\" # False"
    ]
   },
   {
