--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,7 @@
    },
    "outputs": [],
    "source": [
-    "wes'vandelay.com' # 'www.vandelay.com'"
+    "website = 'vandelay.com'# 'www.vandelay.com'"
    ]
   },
   {
