--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,9 @@
    },
    "outputs": [],
    "source": [
-    "website = 'vandelay.com'# 'www.vandelay.com'"
+    "website = 'vandelay.com' # 'www.vandelay.com'\n",
+    "\n",
+    "correct"
    ]
   },
   {
