--- a/index.ipynb
+++ b/index.ipynb
@@ -268,23 +268,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5553334'"
+       "'728'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "phone_number = \"7285553334\" # 728\n",
-    "area_code = phone_number[3:]\n",
+    "area_code = phone_number[:3]\n",
     "area_code"
    ]
   },
